Se termino la animacion de javascript de las cartas de los proyectos

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="componente-visual-inicial">
                           <h2 class="componente-titulo">HTML</h2>
                         </div>
-                        <article class="component-content card">
+                        <article class="componente-content card">
                             <button type="button">
                                 <span>E-commerce</span> 
                             </button>
@@ -213,7 +213,7 @@
                         <div class="componente-visual-inicial">
                           <h2 class="componente-titulo">CSS</h2>
                         </div>
-                        <article class="component-content card">
+                        <article class="componente-content card">
                             <button type="button">
                                 <span>E-commerce</span> 
                             </button>
@@ -299,7 +299,7 @@
                         <div class="componente-visual-inicial">
                           <h2 class="componente-titulo">Javascript</h2>
                         </div>
-                        <article class="component-content card">
+                        <article class="componente-content card">
                             <button type="button">
                                 <span>E-commerce</span> 
                             </button>
@@ -385,7 +385,7 @@
                         <div class="componente-visual-inicial">
                           <h2 class="componente-titulo">GIT</h2>
                         </div>
-                        <article class="component-content card">
+                        <article class="componente-content card">
                             <button type="button">
                                 <span>E-commerce</span> 
                             </button>
@@ -471,7 +471,7 @@
                         <div class="componente-visual-inicial">
                           <h2 class="componente-titulo">React</h2>
                         </div>
-                        <article class="component-content card">
+                        <article class="componente-content card">
                             <button type="button">
                                 <span>E-commerce</span> 
                             </button>
@@ -562,11 +562,12 @@
         <nav>
             <ul>
                 <li><a href=""><i class="bi bi-github"></i></a></li>
-                <li><a href=""><i class="bi bi-github"></i></a></li>
-                <li><a href=""><i class="bi bi-github"></i></a></li>
-                <li><a href=""><i class="bi bi-github"></i></a></li>
+                <li><a href=""><i class="bi bi-laptop"></i></a></li>
+                <li><a href=""><i class="bi bi-cart"></i></a></li>
+                <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                <li><hr></li>
             </ul>
-        </nav>
+        </nav>        
     </aside>
     <footer>
         <h2>
