Se termino con el diseño general de destkop, se dio funcionalidad al formulaio y a algunos links

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <img src="multimedia/LogoMain.svg" alt="">
             <ul>
                 <li>
-                    <a href="">I.Sobre mi</a> 
+                    <a href="#SobreMi">I.Sobre mi</a> 
                 </li>
                 <li>
-                    <a href="">II.Mi trabajo</a> 
+                    <a href="#MiTrabajo">II.Mi trabajo</a> 
                 </li>
                 <li>
-                    <a href="">III.Contacto</a> 
+                    <a href="#Contacto">III.Contacto</a> 
                 </li>
                 <li>
                     <a href="">
@@ -57,7 +57,7 @@
                 y procesados para que puedas analizar el rendimiento de tu negocio.
             </p>
         </section>
-        <section>
+        <section id="SobreMi"> 
             <h2 data-aos="fade-up" class="nombreSeccion">
                 <span>I.Sobre mi</span> <hr>
             </h2>
@@ -114,7 +114,7 @@
             </p>
                 
         </section>
-        <section data-aos="fade-up">
+        <section data-aos="fade-up" id="MiTrabajo">
             <h2 data-aos="fade-up" class="nombreSeccion">
                 II.Mis proyectos <hr>
             </h2>
@@ -195,7 +195,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <button class="componente-botao-fechar"></button>
+                            <div class="componente-botao-fechar"></div>
                         </article>
                       </div>
                     </div>
@@ -281,7 +281,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <button class="componente-botao-fechar"></button>
+                            <div class="componente-botao-fechar"></div>
                         </article>
                       </div>
                     </div>
@@ -367,7 +367,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <button class="componente-botao-fechar"></button>
+                            <div class="componente-botao-fechar"></div>
                         </article>
                       </div>
                     </div>
@@ -378,194 +378,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="componente">
-                    <div class="componente-sem-rolagem">
-                      <div class="componente-interno">
-                        <div class="componente-fundo-imagem"></div>
-                        <div class="componente-visual-inicial">
-                          <h2 class="componente-titulo">GIT</h2>
-                        </div>
-                        <article class="componente-content card">
-                            <button type="button">
-                                <span>E-commerce</span> 
-                            </button>
-                            <h3>
-                                Freaks 3D
-                            </h3>
-                            <p>
-                                Tienda E-commerce de productos en 3D. Se trabajo en un diseño simple que 
-                                permita vizualisar los productos más llamativos al mometo.
-                            </p>
-                            <div>
-                                <ul>
-                                    <li><strong>Lenguajes</strong></li>
-                                    <li>
-                                        <p>
-                                            JavaScript
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            PHP
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            HTML
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            CSS
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            SASS
-                                        </p>
-                                    </li>
-                                </ul>
-                                <ul>
-                                    <li>
-                                        <strong>Frameworks</strong>
-                                    </li>
-                                    <li>
-                                        <p>Boostrap</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div >
-                                <ul class="card-footer">
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-github"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-laptop"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-diagram-3"></span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <button class="componente-botao-fechar"></button>
-                        </article>
-                      </div>
-                    </div>
-                    <div class="componente-index">
-                      <div class="componente-index-back">4</div>
-                      <div class="componente-index-front">
-                        <div class="componente-index-overlay" data-index="4">4</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="componente">
-                    <div class="componente-sem-rolagem">
-                      <div class="componente-interno">
-                        <div class="componente-fundo-imagem"></div>
-                        <div class="componente-visual-inicial">
-                          <h2 class="componente-titulo">React</h2>
-                        </div>
-                        <article class="componente-content card">
-                            <button type="button">
-                                <span>E-commerce</span> 
-                            </button>
-                            <h3>
-                                Freaks 3D
-                            </h3>
-                            <p>
-                                Tienda E-commerce de productos en 3D. Se trabajo en un diseño simple que 
-                                permita vizualisar los productos más llamativos al mometo.
-                            </p>
-                            <div>
-                                <ul>
-                                    <li><strong>Lenguajes</strong></li>
-                                    <li>
-                                        <p>
-                                            JavaScript
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            PHP
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            HTML
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            CSS
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            SASS
-                                        </p>
-                                    </li>
-                                </ul>
-                                <ul>
-                                    <li>
-                                        <strong>Frameworks</strong>
-                                    </li>
-                                    <li>
-                                        <p>Boostrap</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div >
-                                <ul class="card-footer">
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-github"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-laptop"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-diagram-3"></span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <button class="componente-botao-fechar"></button>
-                        </article>
-                      </div>
-                    </div>
-                    <div class="componente-index">
-                      <div class="componente-index-back">5</div>
-                      <div class="componente-index-front">
-                        <div class="componente-index-overlay" data-index="5">5</div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>            
         </section>
     </main>
-    <aside>
-        <nav>
-            <ul>
-                <li><a href=""><i class="bi bi-github"></i></a></li>
-                <li><a href=""><i class="bi bi-laptop"></i></a></li>
-                <li><a href=""><i class="bi bi-cart"></i></a></li>
-                <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                <li><hr></li>
-            </ul>
-        </nav>        
-    </aside>
-    <footer>
+    
+    <footer id="Contacto">
         <h2 data-aos="fade-up" class="nombreSeccion">
             III.Dá el primer paso <hr>
         </h2>
@@ -582,6 +400,17 @@
             </div>
         </form>
     </footer>
+    <aside>
+        <nav>
+            <ul>
+                <li><a href="https://github.com/CuevaTomasArg" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/tomas-santiago-cueva-211088238/"><i class="bi bi-linkedin"></i></a></li>
+                <li><a href="mailto:cuevatomass02@gmail.com"><i class="bi bi-envelope"></i></a></li>
+                <li><a href="https://wa.me/5491123731536"><i class="bi bi-whatsapp"></i></a></li>
+                <li><hr></li>
+            </ul>
+        </nav>        
+    </aside>
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
