Ya se empezo a desarrollar el diseño mobile

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="header">
             <img src="multimedia/LogoMain.svg" alt="">
+            <button type="button" class>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul>
                 <li>
                     <a href="#SobreMi">I.Sobre mi</a> 
@@ -30,8 +35,8 @@
                     <a href="#Contacto">III.Contacto</a> 
                 </li>
                 <li>
-                    <a href="">
-                        <button type="button"> 
+                    <a href="page/curriculum.html" target="_blank">
+                        <button type="button" style="cursor:pointer"> 
                             Resumen
                         </button>
                     </a>
@@ -39,7 +44,6 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <section data-aos="fade-up">
             <p>
