--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- FavIcon-->
-    <link rel="shortcut icon" href="multimedia/LogoTitle.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="multimedia/logos/LogoTitle.svg" type="image/x-icon">
     <script defer src="js/main.js"></script>
 </head>
 <body>
     <header>
         <nav id="header">
-            <img src="multimedia/LogoMain.svg" alt="">
+            <img src="multimedia/logos/LogoMain.svg" alt="">
             <button type="button" id="nav-button" class="nav-button" onclick="openNav()">
                 <span></span>
                 <span></span>
