Se va a empezara dar funcionalidad a los gmails

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- FavIcon-->
     <link rel="shortcut icon" href="multimedia/logos/LogoTitle.svg" type="image/x-icon">
     <script defer src="js/main.js"></script>
+    <script defer src="js/email.js"></script>
 </head>
 <body>
     <header>
@@ -132,7 +133,7 @@
                       <div class="componente-interno">
                         <div class="componente-fundo-imagem"></div>
                         <div class="componente-visual-inicial">
-                          <h2 class="componente-titulo">HTML</h2>
+                          <h2 class="componente-titulo">Sitio web</h2>
                         </div>
                         <article class="componente-content card">
                             <button type="button">
@@ -142,10 +143,10 @@
                                 Freaks 3D
                             </h3>
                             <p>
-                                Tienda E-commerce de productos en 3D. Se trabajo en un diseño simple que 
-                                permita vizualisar los productos más llamativos al mometo.
+                                Tienda E-commerce de productos en 3D. El diseño se desarrollo en Figma y se desarrollo una estructura en el front-end para 
+                                cargar productos en un carrito de compra y fromularios funcionales con PHP
                             </p>
-                            <div>
+                            <div class="list-lenguajes">
                                 <ul>
                                     <li><strong>Lenguajes</strong></li>
                                     <li>
@@ -186,17 +187,17 @@
                             <div >
                                 <ul class="card-footer">
                                     <li>
-                                        <a href="" target="_blank">
+                                        <a href="https://github.com/CuevaTomasArg/Freaks3D-E-commerce.git" target="_blank">
                                             <span class="bi bi-github"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="" target="_blank">
+                                        <a href="https://cuevatomasarg.github.io/freaks3d.github.io/" target="_blank">
                                             <span class="bi bi-laptop"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="" target="_blank">
+                                        <a href="page/designs/freaks3d.html" target="_blank">
                                             <span class="bi bi-diagram-3"></span>
                                         </a>
                                     </li>
@@ -207,9 +208,9 @@
                       </div>
                     </div>
                     <div class="componente-index">
-                      <div class="componente-index-back">1</div>
+                      <div class="componente-index-back">E-commerce</div>
                       <div class="componente-index-front">
-                        <div class="componente-index-overlay" data-index="1">1</div>
+                        <div class="componente-index-overlay" data-index="E-commerce">E-commerce</div>
                       </div>
                     </div>
                   </div>
@@ -218,32 +219,23 @@
                       <div class="componente-interno">
                         <div class="componente-fundo-imagem"></div>
                         <div class="componente-visual-inicial">
-                          <h2 class="componente-titulo">CSS</h2>
+                          <h2 class="componente-titulo">Sitio web</h2>
                         </div>
                         <article class="componente-content card">
                             <button type="button">
-                                <span>E-commerce</span> 
+                                <span>Sitio web</span> 
                             </button>
                             <h3>
-                                Freaks 3D
+                                Quality Training
                             </h3>
                             <p>
-                                Tienda E-commerce de productos en 3D. Se trabajo en un diseño simple que 
-                                permita vizualisar los productos más llamativos al mometo.
+                                Sitio web para profesionales del deporte, proyecto final del curso "Desarrollo web" de Coderhouse
+                                , para el diseño del wireframe se utilizó whimsical, y al codigo se agrego una estructura limpia y adecuada para 
+                                optimizar el SEO.
                             </p>
-                            <div>
+                            <div class="list-lenguajes">
                                 <ul>
                                     <li><strong>Lenguajes</strong></li>
-                                    <li>
-                                        <p>
-                                            JavaScript
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            PHP
-                                        </p>
-                                    </li>
                                     <li>
                                         <p>
                                             HTML
@@ -272,18 +264,14 @@
                             <div >
                                 <ul class="card-footer">
                                     <li>
-                                        <a href="" target="_blank">
+                                        <a href="https://github.com/CuevaTomasArg/CalidadAntesQueCantidad.git
+                                        " target="_blank">
                                             <span class="bi bi-github"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="" target="_blank">
+                                        <a href="https://calidadantesquecantidad.000webhostapp.com/" target="_blank">
                                             <span class="bi bi-laptop"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-diagram-3"></span>
                                         </a>
                                     </li>
                                 </ul>
@@ -293,95 +281,9 @@
                       </div>
                     </div>
                     <div class="componente-index">
-                      <div class="componente-index-back">2</div>
+                      <div class="componente-index-back">Web estatica</div>
                       <div class="componente-index-front">
-                        <div class="componente-index-overlay" data-index="2">2</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="componente">
-                    <div class="componente-sem-rolagem">
-                      <div class="componente-interno">
-                        <div class="componente-fundo-imagem"></div>
-                        <div class="componente-visual-inicial">
-                          <h2 class="componente-titulo">Javascript</h2>
-                        </div>
-                        <article class="componente-content card">
-                            <button type="button">
-                                <span>E-commerce</span> 
-                            </button>
-                            <h3>
-                                Freaks 3D
-                            </h3>
-                            <p>
-                                Tienda E-commerce de productos en 3D. Se trabajo en un diseño simple que 
-                                permita vizualisar los productos más llamativos al mometo.
-                            </p>
-                            <div>
-                                <ul>
-                                    <li><strong>Lenguajes</strong></li>
-                                    <li>
-                                        <p>
-                                            JavaScript
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            PHP
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            HTML
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            CSS
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            SASS
-                                        </p>
-                                    </li>
-                                </ul>
-                                <ul>
-                                    <li>
-                                        <strong>Frameworks</strong>
-                                    </li>
-                                    <li>
-                                        <p>Boostrap</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div >
-                                <ul class="card-footer">
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-github"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-laptop"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="" target="_blank">
-                                            <span class="bi bi-diagram-3"></span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="componente-botao-fechar"></div>
-                        </article>
-                      </div>
-                    </div>
-                    <div class="componente-index">
-                      <div class="componente-index-back">3</div>
-                      <div class="componente-index-front">
-                        <div class="componente-index-overlay" data-index="3">3</div>
+                        <div class="componente-index-overlay" data-index="Web estatica">Web estatica</div>
                       </div>
                     </div>
                   </div>
