--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,15 +12,15 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- FavIcon-->
-    <link rel="shortcut icon" href="../../multimedia/logos/LogoTitle.svg" type="image/x-icon">
-    <script defer src="../main.js"></script>
+    <link rel="shortcut icon" href="multimedia/logos/LogoTitle.svg" type="image/x-icon">
+    <script defer src="js/main.js"></script>
     <script src="../index.js"></script>
     <!-- <script defer src="js/email.js"></script> -->
 </head>
 <body>
     <header>
         <nav id="header">
-            <img src="../../multimedia/logos/LogoMain.svg" alt="">
+            <img src="multimedia/logos/LogoMain.svg" alt="">
             <button type="button" id="nav-button" class="nav-button" onclick="openNav()">
                 <span></span>
                 <span></span>
