Se corrigieroin estilos del responsive, estos cambios si se pueden meter a la rama principal

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -299,6 +299,8 @@
         </h2>
         <form data-aos="fade-up" action="/send-mail" method="POST">
             <div>
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre">
                 <label for="email">Email</label>
                 <input type="text" name="email"> 
                 <label for="whatsapp">Whatsapp</label>
