Se termino de hacer responsive la pagina, solo queda hacer la funcionalidad de los emails

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -42,7 +42,7 @@
                 <li>
                     <a href="page/curriculum.html" target="_blank">
                         <button type="button" style="cursor:pointer"> 
-                            Resumen
+                            Curriculum
                         </button>
                     </a>
                 </li>
@@ -50,7 +50,7 @@
         </nav>
     </header>
     <main id="main">
-        <section data-aos="fade-up">
+        <section>
             <p>
                 Hola, soy
             </p>
