--- a/index.html
+++ b/index.html
@@ -297,7 +297,17 @@
         <h2 data-aos="fade-up" class="nombreSeccion">
             III.Dá el primer paso <hr>
         </h2>
-        <form data-aos="fade-up" action="/send-mail" method="POST">
+        <nav>
+            <button>
+                <img src="multimedia/logos/WhatsApp.svg.webp" alt="whatsapp">
+                <span>WhatsApp</span>
+            </button>
+            <button>
+                <img src="multimedia/logos/logo-Gmail-1.png" alt="gmail">
+                <span>Gmail</span>
+            </button>
+        </nav> 
+        <!-- <form data-aos="fade-up" action="/send-mail" method="POST">
             <div>
                 <label for="nombre">Nombre</label>
                 <input type="text" name="name">
@@ -311,13 +321,14 @@
                 <textarea name="message" id="consulta" cols="30" rows="10"></textarea>
             </div>
             <button type="submit">Enviar</button>
-        </form>
+        </form> -->
     </footer>
     <aside>
         <nav>
             <ul>
                 <li><a href="https://github.com/CuevaTomasArg" target="_blank"><span class="bi bi-github"></span></a></li>
                 <li><a href="https://www.linkedin.com/in/tomas-santiago-cueva-211088238/" target="_blank"><span class="bi bi-linkedin"></span></a></li>
+                <!-- REalizar la pegadoa -->
                 <li><a href="mailto:cuevatomass02@gmail.com" target="_blank"><span class="bi bi-envelope"></span></a></li>
                 <li><a href="https://wa.me/5491123731536" target="_blank"><span class="bi bi-whatsapp"></span></a></li>
                 <li><hr></li>
