Se tienen que arreglar los estilos del footer y hay que agregarles funcionalidad

--- a/index.html
+++ b/index.html
@@ -298,11 +298,13 @@
             III.Dá el primer paso <hr>
         </h2>
         <nav>
-            <button>
-                <img src="multimedia/logos/WhatsApp.svg.webp" alt="whatsapp">
-                <span>WhatsApp</span>
-            </button>
-            <button>
+            <a href="https://wa.me/5491123731536">
+                <button data-aos="fade-up" type="button">
+                    <img src="multimedia/logos/WhatsApp.svg.webp" alt="whatsapp">
+                    <span>WhatsApp</span>
+                </button>
+            </a>
+            <button data-aos="fade-up" type="button">
                 <img src="multimedia/logos/logo-Gmail-1.png" alt="gmail">
                 <span>Gmail</span>
             </button>
