Finalizado el portfolio, detalles a corregir, a medida que se valla subiendo al hosting, detalles: agregar el formulario con nodemailer,

--- a/index.html
+++ b/index.html
@@ -297,17 +297,18 @@
         <h2 data-aos="fade-up" class="nombreSeccion">
             III.Dá el primer paso <hr>
         </h2>
-        <nav>
+        <nav data-aos="fade-up">
             <a href="https://wa.me/5491123731536">
-                <button data-aos="fade-up" type="button">
+                <button type="button">
                     <img src="multimedia/logos/WhatsApp.svg.webp" alt="whatsapp">
                     <span>WhatsApp</span>
                 </button>
             </a>
-            <button data-aos="fade-up" type="button">
-                <img src="multimedia/logos/logo-Gmail-1.png" alt="gmail">
+            <button type="button" onclick="copiarAlPortapapeles('cuevatomass02@gmail.com')">
+                <img src="multimedia/logos/logo-Gmail-1.png" alt="gmail" id="cuevatomass02@gmail.com">
                 <span>Gmail</span>
             </button>
+            <span id="copiado">Copiado en portapapeles</span>
         </nav> 
         <!-- <form data-aos="fade-up" action="/send-mail" method="POST">
             <div>
@@ -329,8 +330,7 @@
         <nav>
             <ul>
                 <li><a href="https://github.com/CuevaTomasArg" target="_blank"><span class="bi bi-github"></span></a></li>
-                <li><a href="https://www.linkedin.com/in/tomas-santiago-cueva-211088238/" target="_blank"><span class="bi bi-linkedin"></span></a></li>
-                <!-- REalizar la pegadoa -->
+                <!-- <li><a href="https://www.linkedin.com/in/tomas-santiago-cueva-211088238/" target="_blank"><span class="bi bi-linkedin"></span></a></li> -->
                 <li><a href="mailto:cuevatomass02@gmail.com" target="_blank"><span class="bi bi-envelope"></span></a></li>
                 <li><a href="https://wa.me/5491123731536" target="_blank"><span class="bi bi-whatsapp"></span></a></li>
                 <li><hr></li>
