--- a/index.html
+++ b/index.html
@@ -304,8 +304,9 @@
                     <span>WhatsApp</span>
                 </button>
             </a>
-            <button type="button" onclick="copiarAlPortapapeles('cuevatomass02@gmail.com')">
-                <img src="multimedia/logos/logo-Gmail-1.png" alt="gmail" id="cuevatomass02@gmail.com">
+            <p id="cuevatomass02" style="display: none;">cuevatomass02@gmail.com</p>
+            <button type="button" onclick="copiarAlPortapapeles('cuevatomass02')">
+                <img src="multimedia/logos/logo-Gmail-1.png" alt="gmail">
                 <span>Gmail</span>
             </button>
             <span id="copiado">Copiado en portapapeles</span>
