Proyecto finalizado con exito

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span></span>
                 <span></span>
             </button>
-            <ul id="nav-list">
+            <ul id="nav-list"  style="width: auto;">
                 <li class="closebtn">
                     <a href="javascript:void(0)" onclick="closeNav()">&times</a>
                 </li>
@@ -130,8 +130,8 @@
             </p>
             <p data-aos="fade-up">
                 <span>Click</span> 
-                <a href="#footer">
-                    <button type="button">
+                <a href="#Contacto" style="cursor:pointer">
+                    <button type="button" >
                         ¿Querés saber más?
                     </button>
                 </a>
@@ -321,7 +321,7 @@
         </section>
     </main>
     
-    <footer id="Contacto">
+    <footer id="Contacto" name="footer">
         <h2 data-aos="fade-up" class="nombreSeccion">
             III.Dá el primer paso <hr>
         </h2>
