Proyecto finalizado con exito

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span></span>
                 <span></span>
             </button>
-            <ul id="nav-list"  style="width: auto;">
+            <ul id="nav-list">
                 <li class="closebtn">
                     <a href="javascript:void(0)" onclick="closeNav()">&times</a>
                 </li>
